# OpenTimelineIO

./: CMakeLists.txt  setup.py
.github/workflows/: python-package.yml
examples/: summarize_timing.cpp
src/: CMakeLists.txt
src/opentime/: CMakeLists.txt  rationalTime.cpp
src/opentimelineio/: CMakeLists.txt  anyDictionary.h  composable.h  imageSequenceReference.h  safely_typed_any.cpp  safely_typed_any.h  serializableObject.h  transition.h  vectorIndexing.h
src/py-opentimelineio/: CMakeLists.txt
src/py-opentimelineio/opentime-bindings/: CMakeLists.txt
src/py-opentimelineio/opentimelineio-bindings/: CMakeLists.txt
tests/: CMakeLists.txt
